--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8" />
-	<link rel="icon" href="%sveltekit.assets%/splotch-solid.svg" />
+	<link rel="icon" href="%sveltekit.assets%/jar.svg" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	%sveltekit.head%
 </head>
